{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 27,
  "lineage": "c98131c1-60ab-f1e5-057c-6c3d7e045981",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0800e7138d8306ab5",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-210-73.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.210.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a66e1153c3e68b1f",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-83-94.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.83.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:371538638536:internet-gateway/igw-015d586dd6580463d",
            "id": "igw-015d586dd6580463d",
            "owner_id": "371538638536",
            "tags": {
              "Customer": "Network",
              "Email": "maher.mfayez@gmail.com",
              "Environment": "ci-cd",
              "GithubRepo": "https://github.com/xxx/",
              "Name": "Network",
              "Owner": "Maher Fayez",
              "Product": "Network",
              "Project": "POC"
            },
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0800e7138d8306ab5",
            "id": "nat-0db35d28cc289ca3b",
            "network_interface_id": "eni-084b56dcc9a60436b",
            "private_ip": "172.16.2.67",
            "public_ip": "18.135.210.73",
            "subnet_id": "subnet-01b33d73b91e861da"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a66e1153c3e68b1f",
            "id": "nat-0c1da5215a1b4c343",
            "network_interface_id": "eni-0ea2bc13a7b70253d",
            "private_ip": "172.16.2.194",
            "public_ip": "52.56.83.94",
            "subnet_id": "subnet-01b33d73b91e861da"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-015d586dd6580463d",
            "id": "r-rtb-01ddd6102d581195b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ddd6102d581195b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c70327e9344c781",
            "owner_id": "371538638536",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db35d28cc289ca3b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e040b529d0f1a8a",
            "owner_id": "371538638536",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c1da5215a1b4c343",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015aaf865a8a515bf",
            "route_table_id": "rtb-06c70327e9344c781",
            "subnet_id": "subnet-07aac926203c1970c"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da1d152d9158095e",
            "route_table_id": "rtb-01e040b529d0f1a8a",
            "subnet_id": "subnet-0f607dd188a2390fe"
          },
          "dependencies": [
            "module.network.aws_eip.gw",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:371538638536:subnet/subnet-07aac926203c1970c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-07aac926203c1970c",
            "map_public_ip_on_launch": false,
            "owner_id": "371538638536",
            "tags": {
              "Name": "private-eu-west-2a"
            },
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:371538638536:subnet/subnet-0f607dd188a2390fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0f607dd188a2390fe",
            "map_public_ip_on_launch": false,
            "owner_id": "371538638536",
            "tags": {
              "Name": "private-eu-west-2b"
            },
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:371538638536:subnet/subnet-01b33d73b91e861da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-01b33d73b91e861da",
            "map_public_ip_on_launch": true,
            "owner_id": "371538638536",
            "tags": {
              "Name": "public-eu-west-2a"
            },
            "vpc_id": "vpc-0e0b4db802a29b630"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:371538638536:vpc/vpc-0e0b4db802a29b630",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e3a8a0f1b1397ca6",
            "default_route_table_id": "rtb-01ddd6102d581195b",
            "default_security_group_id": "sg-0c64d5496ef40b1a2",
            "dhcp_options_id": "dopt-acedbec4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e0b4db802a29b630",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01ddd6102d581195b",
            "owner_id": "371538638536",
            "tags": {
              "Customer": "Network",
              "Email": "maher.mfayez@gmail.com",
              "Environment": "ci-cd",
              "GithubRepo": "https://github.com/xxx/",
              "Name": "Network",
              "Owner": "Maher Fayez",
              "Product": "Network",
              "Project": "POC"
            }
          }
        }
      ]
    }
  ]
}